--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
 node_modules
-=======
-node_modules/
->>>>>>> 460f0d28c58a223d2685ba380db0bb10539128c1
+package*.json
+occupancy-tracker/package*.json
