--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "pg": "^8.6.0",
+    "react": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "ronin-mocks": "^0.1.6",
-    "ronin-server": "^0.1.3"
+    "ronin-server": "^0.1.3",
+    "router": "^1.3.5"
   }
 }
